feat/cg: round 4
